--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <groupId>org.openthinks.generic</groupId>
     <artifactId>OpenThinks-Generic</artifactId>
     <packaging>jar</packaging>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0.GA</version>
     <name>OpenThinks-Generic</name>
     <url>http://maven.apache.org</url>
     <properties>
@@ -18,33 +18,6 @@
         <org.hibernate.javax.persistence.version>1.0.1.Final</org.hibernate.javax.persistence.version>
         <org.hsqldb.version>2.2.9</org.hsqldb.version>
     </properties>
-    <build>
-        <resources>
-            <resource>
-                <directory>src/main</directory>
-                <excludes>
-                    <exclude>**/.*</exclude>
-                </excludes>
-            </resource>
-            <resource>
-                <directory>src/test</directory>
-                <excludes>
-                    <exclude>**/.*</exclude>
-                </excludes>
-            </resource>
-        </resources>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>${org.apache.maven.plugins}</version>
-                <configuration>
-                    <source>1.6</source>
-                    <target>1.6</target>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
     <dependencies>
         <dependency>
             <groupId>org.aspectj</groupId>
@@ -188,7 +161,36 @@
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>${org.junit.version}</version>
-            <scope>test</scope>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
+    <build>
+        <resources>
+            <resource>
+                <directory>src/main</directory>
+                <excludes>
+                    <exclude>**/.*</exclude>
+                </excludes>
+            </resource>
+            <resource>
+                <directory>src/test</directory>
+                <excludes>
+                    <exclude>**/.*</exclude>
+                </excludes>
+            </resource>
+        </resources>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>${org.apache.maven.plugins}</version>
+                <configuration>
+                    <source>1.6</source>
+                    <target>1.6</target>
+                    <encoding>UTF-8</encoding>
+                </configuration>
+            </plugin>
+        </plugins>
+        <finalName>openthinks-generic</finalName>
+    </build>
 </project>
