--- a/pom.xml
+++ b/pom.xml
@@ -179,4 +179,34 @@
         </plugins>
         <finalName>openthinks-generic</finalName>
     </build>
+
+    <licenses>
+        <license>
+            <name>GNU Lesser General Public License v3.0</name>
+            <url>http://www.gnu.org/licenses/lgpl.html</url>
+            <distribution>repo</distribution>
+            <comments>Open Source License</comments>
+        </license>
+    </licenses>
+
+    <organization>
+        <name>OpenThinks</name>
+        <url>openthinks.org</url>
+    </organization>
+
+    <developers>
+        <developer>
+            <id>zhangjunlong</id>
+            <name>张俊龙</name>
+            <email>zhangjunlong@me.com</email>
+            <url>http://zhangjunlong.blogspot.com</url>
+            <organization>OpenThinks</organization>
+            <organizationUrl>openthinks.org</organizationUrl>
+            <roles>
+                <role>architect</role>
+                <role>developer</role>
+            </roles>
+            <timezone>+86</timezone>
+        </developer>
+    </developers>
 </project>
